--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -541,12 +541,30 @@ jobs:
 
           # Count recent commits and create an associative array
           declare -A recent_commit_counts
+          
+          # Debugging COMMIT_LOG
           echo "Debug: Processing COMMIT_LOG:"
-          echo "$COMMIT_LOG"
+          echo "$COMMIT_LOG" | sed 's/%0A/\n/g'
+          
+          # Process COMMIT_LOG safely
           while read -r count name; do
-              recent_commit_counts["$name"]=$count
-              echo "Debug: Commit count for $name: $count"
-          done < <(echo "$COMMIT_LOG" | sed 's/%0A/\n/g' | grep -oP '(?<=~)[^[]*' | sort | uniq -c | sort -rn)
+              # Trim spaces and handle empty lines
+              name=$(echo "$name" | xargs)
+              
+              # Ensure name is not empty before adding to array
+              if [[ -n "$name" ]]; then
+                  recent_commit_counts["$name"]=$count
+                  echo "Debug: Commit count for '$name': $count"
+              else
+                  echo "Warning: Skipping empty name entry."
+              fi
+          done < <(echo "$COMMIT_LOG" | sed 's/%0A/\n/g' | grep -oP '(?<=~)[^[]*' | sed 's/^\s*//g' | sort | uniq -c | sort -rn)
+          
+          # Debug: Print array contents
+          echo "Debug: recent_commit_counts contents:"
+          for key in "${!recent_commit_counts[@]}"; do
+            echo "'$key': ${recent_commit_counts[$key]}"
+          done
 
           echo "Debug: Fetching contributors from GitHub"
           # Fetch contributors from GitHub
