--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -527,15 +527,15 @@ jobs:
 
           # Additional information for the goats
           declare -A additional_info
-          additional_info["ibo"]="\n Discord: <@951737931159187457>\n AniList: [takarealist112](<https://anilist.co/user/5790266/>)"
-          additional_info["aayush262"]="\n Discord: <@918825160654598224>\n AniList: [aayush262](<https://anilist.co/user/5144645/>)"
-          additional_info["Ankit Grai"]="\n Discord: <@1125628254330560623>\n AniList: [bheshnarayan](<https://anilist.co/user/6417303/>)\n X: [grayankit01](<https://x.com/grayankit01>)"
+          additional_info["Sheby"]="\n Discord: <@612532963938271232>\n AniList: [ASheby](<https://anilist.co/user/5724017/>)"
+          additional_info["RyanYuuki"]="\n Discord: <@535831876766793738>\n AniList: [RyanYuuki](<https://anilist.co/user/5965508/>)"
+          additional_info["itsmechinmoy"]="\n Discord: <@523539866311720963>\n AniList: [itsmechinmoy](<https://anilist.co/user/6110204/>)"
           # Decimal color codes for contributors
           declare -A contributor_colors
           default_color="#1ac4c5"
-          contributor_colors["aayush262"]="#5d689d"
-          contributor_colors["Sadwhy"]="#ff7e95"
-          contributor_colors["grayankit"]="#c51aa1"
+          contributor_colors["Sheby"]="#5d689d"
+          contributor_colors["RyanYuuki"]="#ff7e95"
+          contributor_colors["itsmechinmoy"]="#c51aa1"
           contributor_colors["rebelonion"]="#d4e5ed"
           hex_to_decimal() { printf '%d' "0x${1#"#"}"; }
 
