--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -515,183 +515,44 @@ jobs:
       - name: Upload APK to Discord and Telegram
         shell: bash
         run: |
-          # Prepare Discord embed
-          fetch_user_details() {
-            local login=$1
-            user_details=$(curl -s "https://api.github.com/users/$login")
-            name=$(echo "$user_details" | jq -r '.name // .login')
-            login=$(echo "$user_details" | jq -r '.login')
-            avatar_url=$(echo "$user_details" | jq -r '.avatar_url')
-            echo "$name|$login|$avatar_url"
-          }
-
-          # Additional information for the goats
-          declare -A additional_info
-          additional_info["Sheby"]="\n Discord: <@612532963938271232>\n AniList: [ASheby](<https://anilist.co/user/5724017/>)"
-          additional_info["RyanYuuki"]="\n Discord: <@535831876766793738>\n AniList: [RyanYuuki](<https://anilist.co/user/5965508/>)"
-          additional_info["itsmechinmoy"]="\n Discord: <@523539866311720963>\n AniList: [itsmechinmoy](<https://anilist.co/user/6110204/>)"
-          # Decimal color codes for contributors
-          declare -A contributor_colors
-          default_color="#1ac4c5"
-          contributor_colors["Sheby"]="#5d689d"
-          contributor_colors["RyanYuuki"]="#ff7e95"
-          contributor_colors["itsmechinmoy"]="#c51aa1"
-          contributor_colors["rebelonion"]="#d4e5ed"
-          hex_to_decimal() { printf '%d' "0x${1#"#"}"; }
-
-          # Count recent commits and create an associative array
-          declare -A recent_commit_counts
-          echo "Debug: Processing COMMIT_LOG:"
-          echo "$COMMIT_LOG"
-          while read -r count name; do
-              recent_commit_counts["$name"]=$count
-              echo "Debug: Commit count for $name: $count"
-          done < <(echo "$COMMIT_LOG" | sed 's/%0A/\n/g' | grep -oP '(?<=~)[^[]*' | sort | uniq -c | sort -rn)
-        
-          echo "Debug: Fetching contributors from GitHub"
-          contributors=$(curl -s "https://api.github.com/repos/${{ github.repository }}/contributors" | jq 'map(select(.login | test("\\[bot\\]") | not))')
-          echo "Debug: Contributors response:"
-          echo "$contributors"
-
-          echo "Debug: Fetching contributors from GitHub"
-          # Fetch contributors from GitHub
-          contributors=$(curl -L \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{secrets.FINE_GRAIN_TOKEN}}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{github.repository}}/contributors)
-          echo "Debug: Contributors response:"
-          echo "$contributors"
-
-          # Create a sorted list of contributors based on recent commit counts
-          sorted_contributors=$(for login in $(echo "$contributors" | jq -r '.[].login'); do
-              user_info=$(fetch_user_details "$login")
-              name=$(echo "$user_info" | cut -d'|' -f1)
-              count=${recent_commit_counts["$name"]:-0}
-              echo "$count|$login"
-          done | sort -rn | cut -d'|' -f2)
-
-          # Initialize needed variables
-          developers=""
-          committers_count=0
-          max_commits=0
-          top_contributor=""
-          top_contributor_count=0
-          top_contributor_avatar=""
-          embed_color=$(hex_to_decimal "$default_color")
-
-          # Process contributors in the new order
-          while read -r login; do
-            user_info=$(fetch_user_details "$login")
-            name=$(echo "$user_info" | cut -d'|' -f1)
-            login=$(echo "$user_info" | cut -d'|' -f2)
-            avatar_url=$(echo "$user_info" | cut -d'|' -f3)
-
-          # Only process if they have recent commits
-          commit_count=${recent_commit_counts["$name"]:-0}
-          if [ $commit_count -gt 0 ]; then
-            # Update top contributor information
-            if [ $commit_count -gt $max_commits ]; then
-              max_commits=$commit_count
-              top_contributors=("$login")
-              top_contributor_count=1
-              top_contributor_avatar="$avatar_url"
-              embed_color=$(hex_to_decimal "${contributor_colors[$name]:-$default_color}")
-            elif [ $commit_count -eq $max_commits ]; then
-              top_contributors+=("$login")
-              top_contributor_count=$((top_contributor_count + 1))
-              embed_color=$(hex_to_decimal "$default_color")
-            fi
-            echo "Debug top contributors:"
-            echo "$top_contributors"
-
-
-            # Get commit count for this contributor on the main branch
-            branch_commit_count=$(git log --author="$login" --author="$name" --oneline | awk '!seen[$0]++' | wc -l)
-
-            # Debug: Print recent_commit_counts
-            echo "Debug: recent_commit_counts contents:"
-            for key in "${!recent_commit_counts[@]}"; do
-              echo "$key: ${recent_commit_counts[$key]}"
-            done
-
-            extra_info="${additional_info[$name]}"
-            if [ -n "$extra_info" ]; then
-              extra_info=$(echo "$extra_info" | sed 's/\\n/\n- /g')
-            fi
-
-            # Construct the developer entry
-            developer_entry="◗ **${name}** ${extra_info}
-          - Github: [${login}](https://github.com/${login})
-          - Commits: ${branch_commit_count}"
-
-
-
-            # Add the entry to developers, with a newline if it's not the first entry
-            if [ -n "$developers" ]; then
-              developers="${developers}
-          ${developer_entry}"
-              else
-                developers="${developer_entry}"
-              fi
-              committers_count=$((committers_count + 1))
-            fi
-          done <<< "$sorted_contributors"
-
-          # Set the thumbnail URL and color based on top contributor(s)
-          if [ $top_contributor_count -eq 1 ]; then
-            thumbnail_url="$top_contributor_avatar"
-          else
-            thumbnail_url="https://i.imgur.com/qt1ixRk.gif"
-            embed_color=$(hex_to_decimal "$default_color")
-          fi
-
           # Truncate field values
           max_length=1000
           commit_messages=$(echo "$COMMIT_LOG" | sed 's/%0A/\n/g; s/^/\n/')
-          if [ ${#developers} -gt $max_length ]; then
-            developers="${developers:0:$max_length}... (truncated)"
-          fi
           if [ ${#commit_messages} -gt $max_length ]; then
-            commit_messages="${commit_messages:0:$max_length}... (truncated)"
+            commit_messages="${commit_messages:0:$max_length}"
           fi
           # Construct Discord payload
           discord_data=$(jq -nc \
-                        --arg field_value "$commit_messages" \
-                        --arg author_value "$developers" \
-                        --arg footer_text "Version $VERSION" \
-                        --arg timestamp "$(date -u +%Y-%m-%dT%H:%M:%S.000Z)" \
-                        --arg thumbnail_url "$thumbnail_url" \
-                        --arg embed_color "$embed_color" \
-                        '{
-                          "content": "${{env.ping_variable}}",
-                          "embeds": [
-                            {
-                              "title": "New Alpha-Build dropped 🔥",
-                              "color": $embed_color,
-                              "fields": [
+                            --arg content "$ping_variable" \
+                            --arg field_value "$commit_messages" \
+                            --arg footer_text "Version $VERSION" \
+                            --arg timestamp "$(date -u +%Y-%m-%dT%H:%M:%S.000Z)" \
+                            --arg thumbnail_url "${thumbnail_url:-https://cdn.discordapp.com/icons/1303000390505336893/d5c4b7afadec08e4c03e89cf997b5f6a.png}" \
+                            --arg embed_color "$embed_color" \
+                            '{
+                              "content": $content,
+                              "embeds": [
                                 {
-                                  "name": "Commits:",
-                                  "value": $field_value,
-                                  "inline": true
-                                },
-                                {
-                                  "name": "Developers:",
-                                  "value": $author_value,
-                                  "inline": false
+                                  "title": "New Alpha-Build dropped 🔥",
+                                  "color": ($embed_color | tonumber),
+                                  "fields": [
+                                    {
+                                      "name": "Commits:",
+                                      "value": $field_value,
+                                      "inline": true
+                                    }
+                                  ],
+                                  "footer": {
+                                    "text": $footer_text
+                                  },
+                                  "timestamp": $timestamp,
+                                  "thumbnail": {
+                                    "url": $thumbnail_url
+                                  }
                                 }
                               ],
-                              "footer": {
-                                "text": $footer_text
-                              },
-                              "timestamp": $timestamp,
-                              "thumbnail": {
-                                "url": $thumbnail_url
-                              }
-                            }
-                          ],
-                          "attachments": []
-                        }')
+                              "attachments": []
+                            }')
           echo "Debug: Final Discord payload is:"
           echo "$discord_data"
           # Send Discord message
@@ -728,8 +589,7 @@ jobs:
 
           Commits:
           ${telegram_commit_messages}
-          Devs:
-          ${telegram_dev_info}
+
           version: ${VERSION}" \
               -F "parse_mode=HTML")
 
