--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -127,16 +127,14 @@ jobs:
 
           # Upload APK to Telegram
           response=$(curl -sS -f -X POST \
-              "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument" \
-              -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" \
-              -F "message_thread_id=${{secrets.TELEGRAM_THREAD_ID }}" \
-              -F "caption=New Alpha-Build dropped 🔥
-
+              "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
+              -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" \
+              -d "message_thread_id=${{ secrets.TELEGRAM_THREAD_ID }}" \
+              -d "text=New Alpha-Build dropped 🔥
           Commits:
           ${telegram_commit_messages}
-
-          version: $VERSION" \
-              -F "parse_mode=HTML")
+          Version: $VERSION" \
+              -d "parse_mode=HTML")
 
       - name: Upload Current SHA as Artifact
         uses: actions/upload-artifact@v4
