--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -455,10 +455,6 @@ jobs:
   sendMessage:
     runs-on: ubuntu-latest
     needs: [build-android, build-ios, build-linux, build-windows, build-macos]
-    permissions:
-      contents: read
-      pull-requests: read
-      actions: read
     steps:
       - name: Cloing repository
         uses: actions/checkout@v4
@@ -469,7 +465,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v6
         with:
           workflow: dart.yml
-          name: last-sha
+          name: last-shaa
         continue-on-error: true
 
       - name: Get Commits Since Last Run
@@ -508,7 +504,7 @@ jobs:
         shell: bash
         run: |
           # Truncate field values
-          max_length=1000
+          max_length=1024
           commit_messages=$(echo "$COMMIT_LOG" | sed 's/%0A/\n/g; s/^/\n/')
           if [ ${#commit_messages} -gt $max_length ]; then
             commit_messages="${commit_messages:0:$max_length}"
@@ -568,29 +564,23 @@ jobs:
           telegram_commit_messages="<blockquote>${telegram_commit_messages}</blockquote>"
           echo "$telegram_commit_messages"
 
-          # Configuring dev info
-          echo "$developers" > dev_info.txt
-          # making the file executable
-          chmod +x scripts/tel_parser.sed
-          ./scripts/tel_parser.sed dev_info.txt >> output.txt
-          dev_info_tel=$(< output.txt)
-
-          telegram_dev_info="<blockquote>${dev_info_tel}</blockquote>"
-          echo "$telegram_dev_info"
-
+          echo "Debug: TELEGRAM_BOT_TOKEN='${{ secrets.TELEGRAM_BOT_TOKEN }}'"
+          echo "Debug: TELEGRAM_CHAT_ID='${{ secrets.TELEGRAM_CHAT_ID }}'"
+          echo "Debug: TELEGRAM_THREAD_ID='${{ secrets.TELEGRAM_THREAD_ID }}'"
+          echo "Debug: VERSION='${VERSION}'"
+          echo "Debug: Telegram Caption: $telegram_commit_messages"
 
           # Upload APK to Telegram
           response=$(curl -sS -f -X POST \
-              "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument" \
-              -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" \
-              -F "message_thread_id=${{secrets.TELEGRAM_THREAD_ID }}" \
-              -F "caption=New Alpha-Build dropped 🔥
-
+              "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
+              -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" \
+              -d "message_thread_id=${{ secrets.TELEGRAM_THREAD_ID }}" \
+              -d "text=New Alpha-Build dropped 🔥
+              
           Commits:
           ${telegram_commit_messages}
-
-          version: ${VERSION}" \
-              -F "parse_mode=HTML")
+          Version: $VERSION" \
+              -d "parse_mode=HTML")
 
       - name: Upload Current SHA as Artifact
         uses: actions/upload-artifact@v4
